--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -56,18 +56,13 @@ fading = true;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 
-inactive-opacity = 0.7;
-active-opacity = 1.0;
+inactive-opacity = 0.8;
+active-opacity = 0.9;
 
 
 #################################
 #     Background-Blurring       #
 #################################
-blur-method = "dual_kawase";
-blur-strength = 22;
-blur-strength = 3;
-
-
 
 
 backend = "glx";
@@ -75,3 +70,17 @@ backend = "glx";
 # Enable/disable VSync.
 # vsync = false
 vsync = true;
+
+
+
+opacity-rule = [
+	"90:class_g = 'konsole'",
+	"100:class_g = 'mpv'",
+	"100:class_g = 'vlc'"
+];
+
+blur:
+{
+	method = "dual_kawase";
+	strength = 2;
+}
