--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -20,10 +20,10 @@ type = internal/bspwm
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+label-focused-padding = 5
 
 label-occupied = %index%
-label-occupied-padding = 2
+label-occupied-padding = 5
 
 label-urgent = %index%!
 label-urgent-background = ${colors.alert}
@@ -31,30 +31,11 @@ label-urgent-padding = 2
 
 label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-empty-padding = 5
 
 ; Separator in between workspaces
 ; label-separator = |
 
-
-
-
-[module/xbacklight]
-type = internal/xbacklight
-
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #fff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
 
 [module/cpu]
 type = internal/cpu
@@ -133,20 +114,16 @@ format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
+bar-volume-width = 5
+bar-volume-foreground-0 = #ff5555
+bar-volume-foreground-1 = #f5a70a
 bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
+bar-volume-gradient = true
 bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
+bar-volume-indicator-font = 3
+bar-volume-fill = ||
 bar-volume-fill-font = 2
-bar-volume-empty = ─
+bar-volume-empty = $$
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
@@ -187,9 +164,7 @@ animation-discharging-framerate = 750
 
 [module/powermenu]
 type = custom/menu
-
 expand-right = true
-
 format-spacing = 1
 
 label-open = 
