--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -22,13 +22,6 @@ shadow-opacity = 0.2
 # shadow-offset-y = 7;
 
 
-
-
-
-
-
-
-
 #################################
 #           Fading              #
 #################################
@@ -46,7 +39,6 @@ fading = true;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
-
 
 
 
@@ -76,7 +68,7 @@ vsync = true;
 opacity-rule = [
 	"90:class_g = 'konsole'",
 	"100:class_g = 'mpv'",
-	"100:class_g = 'vlc'"
+	"95:class_g = 'code-oss'"
 ];
 
 blur:
