--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -28,50 +28,34 @@ include-file = ~/.config/polybar/modules/date.ini
 include-file = ~/.config/polybar/modules/title.ini
 include-file = ~/.config/polybar/modules/network.ini
 
-
-
-
-
+[bar/external]
+monitor = ${env:MONITOR:DP-1-3}
+inherit = bar/main
 
 [bar/main]
-; monitor = ${env:MONITOR:HDMI-1}
-; monitor = ${env:MONITOR:DP-1-3}
-
-
+;monitor = ${env:MONITOR:LVDS1}
 wm-restack = bspwm #this makes polybar disappear once a window is opened to its full width
 width = 100%
 height = 30
-;radius = 1.0
 fixed-center = false
-; offset-x = 30%
-; In general you center align your bar by setting width = X% and offset-x = Y%, so that X + 2 * Y = 100.
-
 background = ${colors.background}
 foreground = ${colors.foreground}
-
 line-size = 3
 line-color = #f00
-
 ;border-size = 0
 border-color = #00000000
-
 padding-left = 0
 padding-right = 0
-
 module-margin-left = 1
 module-margin-right = 5;2
-
 font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-2 = siji:pixelsize=10;1
-
 modules-left = bspwm 
 modules-center = title
 modules-right = alsa wlan eth battery date 
-
 tray-position = right
 tray-padding = 2
-
 cursor-click = pointer
 cursor-scroll = ns-resize
 
@@ -90,8 +74,6 @@ line-color = #f00
 border-size = 4
 border-color = #00000000
 modules-center = bspwm 
-
-
 
 [settings]
 screenchange-reload = true
