pheww,added a buncha stuff

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,10 +27,23 @@ include-file = ~/.config/polybar/modules/bspwm.ini
 include-file = ~/.config/polybar/modules/date.ini
 include-file = ~/.config/polybar/modules/title.ini
 include-file = ~/.config/polybar/modules/network.ini
+include-file = ~/.config/polybar/modules/powermenu.ini
 
-[bar/external]
-monitor = ${env:MONITOR:DP-1-3}
-inherit = bar/main
+;[bar/external]
+;monitor = DP-1-3
+;modules-center = bspwm
+;background = ${colors.background}
+;foreground = ${colors.foreground}
+;line-size = 3
+;line-color = #f00
+;border-color = #00000000
+;padding-left = 0
+;padding-right = 0
+;module-margin-left = 1
+;module-margin-right = 5
+;bottom = true
+;inherit = bar/main
+;monitor-fallback = LVDS1
 
 [bar/main]
 ;monitor = ${env:MONITOR:LVDS1}
@@ -77,7 +90,4 @@ modules-center = bspwm
 
 [settings]
 screenchange-reload = true
-
-
-
 
