--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -68,7 +68,9 @@ vsync = true;
 opacity-rule = [
 	"90:class_g = 'konsole'",
 	"100:class_g = 'mpv'",
-	"95:class_g = 'code-oss'"
+	"95:class_g = 'code-oss'",
+	"95:class_g = 'Google-chrome'",
+	"90:class_g = 'Zathura'",
 ];
 
 blur:
