--- a/polybar/modules/title.ini
+++ b/polybar/modules/title.ini
@@ -9,6 +9,6 @@ label = %title%
 label-maxlen = 35
 label-font = 4
 
-label-empty = "Arch Linux"
+label-empty = " Arch Linux"
 label-empty-font = 4
 label-empty-foreground = #707880
