--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -61,9 +61,11 @@ padding-left = 0
 padding-right = 0
 module-margin-left = 1
 module-margin-right = 5;2
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-; font-2 = siji:pixelsize=10;1
+module-margin-top = 5
+;font-0 = fixed:pixelsize=10;1
+font-0 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-1 = Noto Color Emoji:style=Regular:scale=10;3
+font-2 = Hack Nerd Font:style=Regular
 modules-left = bspwm 
 modules-center = title
 modules-right = alsa wlan eth battery date 
