--- a/polybar/modules/alsa.ini
+++ b/polybar/modules/alsa.ini
@@ -2,10 +2,10 @@
 type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL
+label-volume = "VOL" 
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = " "
+format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
