--- a/polybar/modules/battery.ini
+++ b/polybar/modules/battery.ini
@@ -8,7 +8,7 @@ format-charging = <animation-charging> <label-charging>
 format-charging-underline = #ffb52a
 
 format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${colors.alert} ;${self.format-charging-underline}
+format-discharging-underline = ${colors.alert}
 
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
