--- a/polybar/modules/title.ini
+++ b/polybar/modules/title.ini
@@ -3,7 +3,8 @@ type = internal/xwindow
 
 format = <label>
 format-prefix = "󰊠 "
-format-prefix-foreground = ${color.blue}
+;format-prefix-foreground = ${color.blue}
+format-prefix-foreground = #f1f1f1 
 
 label = %title%
 label-maxlen = 35
