--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -6,5 +6,7 @@
       "trace.server": "verbose",
       "filetypes": ["go"]
     }
-  }
+  },
+  "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/14.0.3/clangd_14.0.3/bin/clangd",
+  "Lua.telemetry.enable": true
 }
