--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -47,7 +47,7 @@ include-file = ~/.config/polybar/modules/powermenu.ini
 
 [bar/main]
 ;monitor = ${env:MONITOR:LVDS1}
-wm-restack = bspwm #this makes polybar disappear once a window is opened to its full width
+wm-restack = bspwm 
 width = 100%
 height = 30
 fixed-center = false
@@ -56,7 +56,8 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 ;border-size = 0
-border-color = #00000000
+;border-color = #00000000
+border-color = #000000
 padding-left = 0
 padding-right = 0
 module-margin-left = 1
