--- a/polybar/modules/network.ini
+++ b/polybar/modules/network.ini
@@ -6,8 +6,8 @@ interval = 3.0
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
 label-connected = %essid%
+;label-connected =  %upspeed:9%  %downspeed:9% 
 
-; format-disconnected =
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
@@ -22,11 +22,11 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = enp0s20u2
+interface = eno1
 interval = 3.0
 format-connected-underline = #55aa55
 accumulate-stats = true
 format-disconnected-padding = 1
 label-connected =  %upspeed:9%  %downspeed:9% 
-label-disconnected = ﴿ %upspeed:9%  %downspeed:9% 
+;label-disconnected = ﴿ %upspeed:9%  %downspeed:9% 
 
