good rice == good life

--- a/polybar/modules/alsa.ini
+++ b/polybar/modules/alsa.ini
@@ -1,23 +1,16 @@
 [module/alsa]
 type = internal/alsa
 
-format-volume = <label-volume> <bar-volume>
-label-volume = "VOL" 
-label-volume-foreground = ${root.foreground}
+format-volume = <ramp-volume> <label-volume> 
+format-volume-underline = #f2f
+format-volume-padding = 10px
+format-volume-spacing = 5px
 
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
+label-volume = %percentage%%
 
-bar-volume-width = 10
-bar-volume-foreground-0 = #ff5555
-bar-volume-foreground-1 = #f5a70a
-bar-volume-foreground-2 = #55aa55
-bar-volume-gradient = true
-bar-volume-indicator = |
-bar-volume-indicator-font = 3
-bar-volume-fill = ||
-bar-volume-fill-font = 2
-bar-volume-empty = $$
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+label-muted = "遼  muted"
+label-muted-foreground = ${colors.foreground-alt}
+label-muted-underline = #353b48
+label-muted-padding = 8px
+
+ramp-volume-0 =  ﰝ
