--- a/polybar/modules/misc.ini
+++ b/polybar/modules/misc.ini
@@ -3,6 +3,14 @@
 ; content = hiya
 ; click-left = nm-applet
 
+[module/power]
+type = custom/menu
+;label-open = 拉
+label-open = ⏻
+menu-0-0 = lock
+menu-0-0-exec = i3lock
+format-spacing = 2
+format-underline = #ffb52a
 
 
 ; [module/menu-apps]
