--- a/polybar/modules/powermenu.ini
+++ b/polybar/modules/powermenu.ini
@@ -1,16 +1,11 @@
 [module/powermenu]
 type = custom/menu
-;content = "hiya"
+;label-open = 拉
+label-open = ⏻
 
-label-open = Power
-label-close = x
-label-separator = |
-format-spacing = 2
+menu-0-0 = lock
+menu-0-0-exec = i3lock
 
-menu-0-0 = nm
-menu-0-0-exec = '/home/noornee/script.sh'
-
-menu-0-1 = Chrome
-;menu-1-0-exec = google-chrome-stable &
-
+format-spacing = 5
+;format-underline = #ffb52a
 
