--- a/polybar/modules/title.ini
+++ b/polybar/modules/title.ini
@@ -2,14 +2,15 @@
 type = internal/xwindow
 
 format = <label>
-format-prefix = "󰊠 "
-;format-prefix-foreground = ${color.blue}
-format-prefix-foreground = #f1f1f1 
+format-prefix = 
+format-prefix-foreground = ${self.label-empty-foreground}
 
 label = %title%
-label-maxlen = 35
-label-font = 4
+label-maxlen = 50
+label-padding = 5px
+;label-font = 3
 
-label-empty = " Arch Linux"
-label-empty-font = 4
+label-empty = "Arch Linux"
+label-empty-padding = ${self.label-padding}
+;label-empty-font = 3
 label-empty-foreground = #707880
