--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -66,7 +66,7 @@ vsync = true;
 
 
 opacity-rule = [
-	"90:class_g = 'konsole'",
+	#"80:class_g = 'konsole'",
 	"100:class_g = 'mpv'",
 	"95:class_g = 'code-oss'",
 	"95:class_g = 'Google-chrome'",
