--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -36,7 +36,7 @@ wm-restack = bspwm
 width = 100%
 height = 30
 fixed-center = false
-line-size = 3
+line-size = 2
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -45,14 +45,14 @@ padding-left = 0
 padding-right = 0
 
 module-margin-left = 1
-module-margin-right = 5;2
-module-margin-top = 5
+module-margin-right = 5
+;module-margin-top = 5
 
 font-0 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-1 = Noto Color Emoji:style=Regular:scale=10;3
-font-2 = Hack Nerd Font:style=Regular
+font-1 = Hack Nerd Font:style=Regular:size=11
+;font-2 = Noto Color Emoji:style=Regular:scale=10;3
 
-modules-left = bspwm 
+modules-left = bspwm powermenu
 modules-center = title
 modules-right = alsa wlan eth battery date 
 
