--- a/polybar/modules/date.ini
+++ b/polybar/modules/date.ini
@@ -1,15 +1,20 @@
 [module/date]
 type = internal/date
-interval = 5
+interval = 1.0
 
-date =
-date-alt = " %Y-%m-%d"
+;date = %Y-%m-%d%
+date = 
+date-alt = %A, %d %B %Y
 
-time = %H:%M
+time = %H:%M:%S
 time-alt = %H:%M:%S
 
-format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
-
 label = %date% %time%
+
+format = "  <label>"
+format-underline = #0a6cf5
+format-padding = 5px
+
+
+;label-font = 3
+;label-foreground = 
