--- a/polybar/modules/network.ini
+++ b/polybar/modules/network.ini
@@ -5,20 +5,20 @@ interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
-label-connected = %essid%
+
 ;label-connected =  %upspeed:9%  %downspeed:9% 
+label-connected = %essid%
+label-connected-padding = 5px
+label-disconnected = 睊
+label-disconnected-foreground = ${colors.foreground-alt}
+;label-disconnected-foreground = #44bd32
 
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+format-disconnected = <label-disconnected>
+format-disconnected-underline = ${self.format-connected-underline}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
+ramp-signal-0 = 
+
+
 
 [module/eth]
 type = internal/network
@@ -28,5 +28,4 @@ format-connected-underline = #55aa55
 accumulate-stats = true
 format-disconnected-padding = 1
 label-connected =  %upspeed:9%  %downspeed:9% 
-;label-disconnected = ﴿ %upspeed:9%  %downspeed:9% 
 
