added a buncha stuff

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -71,6 +71,7 @@ opacity-rule = [
 	"95:class_g = 'code-oss'",
 	"95:class_g = 'Google-chrome'",
 	"90:class_g = 'Zathura'",
+	"100:class_g = 'i3lock'",
 ];
 
 blur:
