--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -56,8 +56,18 @@ modules-left = bspwm powermenu
 modules-center = title
 modules-right = alsa wlan eth battery date 
 
+;tray-position = right
+;tray-padding = 2
+
 tray-position = right
-tray-padding = 2
+tray-detached = false
+tray-maxsize = 16
+tray-transparent = false
+;tray-background = #95a5a6
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 0
+tray-scale = 1.0
 
 cursor-click = pointer
 cursor-scroll = ns-resize
