--- a/polybar/modules/powermenu.ini
+++ b/polybar/modules/powermenu.ini
@@ -2,10 +2,16 @@
 type = custom/menu
 ;label-open = 拉
 label-open = ⏻
+label-separator = |
+;expand-right = true
 
-menu-0-0 = lock
-menu-0-0-exec = i3lock
+menu-0-0 = shutdown
+menu-0-0-exec = systemctl poweroff
+menu-0-0-underline = #c0392b
+
+menu-0-1 = reboot
+menu-0-1-exec = systemctl reboot
+menu-0-1-underline = #27ae60
 
 format-spacing = 5
-;format-underline = #ffb52a
 
