deleted rofi config and bkup, updated a few things

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,5 @@
 set -g mouse on
-set -g status-style fg=white,bg=black
-#set -g status off
+#set -g status-style fg=white,bg=black
 
 # reload source-file
 bind r source-file ~/.config/tmux/tmux.conf
@@ -13,3 +12,14 @@ bind -n M-l select-pane -R
 # Set new panes to open in current directory
 bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'wfxr/tmux-power'
+
+
+set -g @tmux_power_theme 'custom'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+#run '~/.config/tmux/plugins/tmp/tpm'
+run '$HOME/.config/tmux/plugins/tpm/tpm'
