--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,7 +27,7 @@ include-file = ~/.config/polybar/modules/bspwm.ini
 include-file = ~/.config/polybar/modules/date.ini
 include-file = ~/.config/polybar/modules/title.ini
 include-file = ~/.config/polybar/modules/network.ini
-include-file = ~/.config/polybar/modules/powermenu.ini
+;include-file = ~/.config/polybar/modules/powermenu.ini
 
 
 [bar/main]
@@ -49,10 +49,10 @@ module-margin-right = 5
 ;module-margin-top = 5
 
 font-0 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-1 = Hack Nerd Font:style=Regular:size=11
+font-1 = Hack Nerd Font:style=Regular:size=10
 ;font-2 = Noto Color Emoji:style=Regular:scale=10;3
 
-modules-left = bspwm powermenu
+modules-left = bspwm
 modules-center = title
 modules-right = alsa wlan eth battery date 
 
