--- a/polybar/modules/network.ini
+++ b/polybar/modules/network.ini
@@ -3,7 +3,7 @@ type = internal/network
 interface = wlp3s0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <ramp-signal>  <label-connected>
 format-connected-underline = #9f78e1
 
 ;label-connected =  %upspeed:9%  %downspeed:9% 
@@ -23,6 +23,7 @@ ramp-signal-0 = 
 [module/eth]
 type = internal/network
 interface = eno1
+;interface = enp0s20u1
 interval = 3.0
 format-connected-underline = #55aa55
 accumulate-stats = true
