--- a/polybar/modules/title.ini
+++ b/polybar/modules/title.ini
@@ -7,10 +7,10 @@ format-prefix-foreground = ${self.label-empty-foreground}
 
 label = %title%
 label-maxlen = 50
-label-padding = 5px
+label-padding-left = 8px
 ;label-font = 3
 
 label-empty = "Arch Linux"
-label-empty-padding = ${self.label-padding}
+label-empty-padding = ${self.label-padding-left}
 ;label-empty-font = 3
 label-empty-foreground = #707880
