added option for second monitor and refactored

--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -7,5 +7,14 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-yellow = #FDD835
+
+black = #333333
+red = #C4265E
+green = #86B42B
+yellow = #B3B42B
+dim_blue = #6A7EC8
+light_blue = #0a6cf5
+magenta = #8C6BC8
+cyan = #56ADBC
+white = #E3E3DD
 
