--- a/polybar/modules/battery.ini
+++ b/polybar/modules/battery.ini
@@ -13,7 +13,7 @@ label-low = low
 label-low-padding = ${self.label-full-padding}
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #44bd32
+format-charging-underline = ${colors.green}
 format-charging-spacing = 5px
 format-charging-padding = 10px
 
