--- a/polybar/modules/date.ini
+++ b/polybar/modules/date.ini
@@ -12,7 +12,8 @@ time-alt = %H:%M:%S
 label = %date% %time%
 
 format = "  <label>"
-format-underline = #0a6cf5
+;format-underline = #0a6cf5
+format-underline = ${colors.light_blue}
 format-padding = 5px
 
 
