--- a/polybar/modules/network.ini
+++ b/polybar/modules/network.ini
@@ -4,14 +4,13 @@ interface = wlp3s0
 interval = 3.0
 
 format-connected = <ramp-signal>  <label-connected>
-format-connected-underline = #9f78e1
+format-connected-underline = ${colors.cyan}
 
 ;label-connected =  %upspeed:9%  %downspeed:9% 
 label-connected = %essid%
 label-connected-padding = 5px
 label-disconnected = 睊
 label-disconnected-foreground = ${colors.foreground-alt}
-;label-disconnected-foreground = #44bd32
 
 format-disconnected = <label-disconnected>
 format-disconnected-underline = ${self.format-connected-underline}
