--- a/polybar/modules/title.ini
+++ b/polybar/modules/title.ini
@@ -3,7 +3,7 @@ type = internal/xwindow
 
 format = <label>
 format-prefix = 
-format-prefix-foreground = ${self.label-empty-foreground}
+format-prefix-foreground = ${colors.light_blue}
 
 label = %title%
 label-maxlen = 50
@@ -13,4 +13,4 @@ label-padding-left = 8px
 label-empty = "Arch Linux"
 label-empty-padding = ${self.label-padding-left}
 ;label-empty-font = 3
-label-empty-foreground = #707880
+label-empty-foreground = ${colors.foreground}
