--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,11 +27,10 @@ include-file = ~/.config/polybar/modules/bspwm.ini
 include-file = ~/.config/polybar/modules/date.ini
 include-file = ~/.config/polybar/modules/title.ini
 include-file = ~/.config/polybar/modules/network.ini
-;include-file = ~/.config/polybar/modules/powermenu.ini
 
 
 [bar/main]
-;monitor = ${env:MONITOR:LVDS1}
+monitor = ${env:MONITOR:LVDS-1}
 wm-restack = bspwm 
 width = 100%
 height = 30
@@ -50,14 +49,11 @@ module-margin-right = 5
 
 font-0 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-1 = Hack Nerd Font:style=Regular:size=10
-;font-2 = Noto Color Emoji:style=Regular:scale=10;3
+font-2 = Noto Color Emoji:style=Regular:scale=10;1
 
 modules-left = bspwm
-modules-center = title
+modules-center = title pulseaudio
 modules-right = alsa wlan eth battery date 
-
-;tray-position = right
-;tray-padding = 2
 
 tray-position = right
 tray-detached = false
@@ -71,6 +67,11 @@ tray-scale = 1.0
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+
+[bar/external]
+monitor = ${env:MONITOR:DP-1-3}
+inherit = bar/main
 
 
 [settings]
