--- a/polybar/modules/alsa.ini
+++ b/polybar/modules/alsa.ini
@@ -2,7 +2,7 @@
 type = internal/alsa
 
 format-volume = <ramp-volume> <label-volume> 
-format-volume-underline = #f2f
+format-volume-underline = ${colors.red}
 format-volume-padding = 10px
 format-volume-spacing = 5px
 
@@ -10,7 +10,7 @@ label-volume = %percentage%%
 
 label-muted = "遼  muted"
 label-muted-foreground = ${colors.foreground-alt}
-label-muted-underline = #353b48
+label-muted-underline = ${colors.black}
 label-muted-padding = 8px
 
 ramp-volume-0 =  ﰝ
