--- a/polybar/modules/bspwm.ini
+++ b/polybar/modules/bspwm.ini
@@ -1,19 +1,25 @@
 [module/bspwm]
 type = internal/bspwm
 
-label-focused = %index%
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+;   %output%
+; Default: %icon% %name%
+label-focused = %icon% %name%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
 label-focused-padding = 5
 
-label-occupied = %index%
+;label-occupied = %name%
 label-occupied-padding = 5
 
-label-urgent = %index%!
+;label-urgent = %index%!
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
-label-empty = %index%
+;label-empty = %name%
 label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 5
 
