switched sound server from alsa to pulseaudio

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -21,7 +21,7 @@ margin-top = 5
 margin-bottom = 5
 
 include-file = ~/.config/polybar/colors.ini
-include-file = ~/.config/polybar/modules/alsa.ini
+include-file = ~/.config/polybar/modules/pulseaudio.ini
 include-file = ~/.config/polybar/modules/battery.ini
 include-file = ~/.config/polybar/modules/bspwm.ini
 include-file = ~/.config/polybar/modules/date.ini
@@ -52,8 +52,8 @@ font-1 = Hack Nerd Font:style=Regular:size=10
 font-2 = Noto Color Emoji:style=Regular:scale=10;1
 
 modules-left = bspwm
-modules-center = title pulseaudio
-modules-right = alsa wlan eth battery date 
+modules-center = title
+modules-right = pulseaudio wlan eth battery date 
 
 tray-position = right
 tray-detached = false
