--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -1,25 +1,29 @@
 [module/pulseaudio]
 type = internal/pulseaudio
-
 sink = alsa_output.pci-0000_00_1b.0.analog-stereo
+click-right = pavucontrol
 
-format-volume = <ramp-volume> <label-volume> 
-format-volume-underline = ${colors.red}
+format-volume = <ramp-volume> <bar-volume> <label-volume>
+format-volume-underline = ${colors.black}
 format-volume-padding = 10px
 format-volume-spacing = 5px
+
+ramp-volume-0 =  ﰝ
+
+bar-volume-width = 5
+bar-volume-foreground-0 = #ff5555
+bar-volume-foreground-1 = #f5a70a
+bar-volume-foreground-2 = #55aa55
+bar-volume-gradient = true
+bar-volume-indicator = 
+bar-volume-indicator-font = 2
+bar-volume-fill = ||
+bar-volume-fill-font = 2
+bar-volume-empty = --
+bar-volume-empty-font = 2
 
 label-volume = %percentage%%
 label-muted = "遼  muted"
 label-muted-foreground = ${colors.foreground-alt}
 label-muted-underline = ${colors.black}
 label-muted-padding = 8px
-
-ramp-volume-0 =  ﰝ
-
-; Right and Middle click
-click-right = pavucontrol
-; click-middle = 
-
-
-
-
