--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -67,6 +67,7 @@ vsync = true;
 
 opacity-rule = [
 	"100:class_g = 'mpv'",
+	"100:class_g = 'VirtualBox Machine'",
 	"95:class_g = 'Google-chrome'",
 	"90:class_g = 'Zathura'",
 ];
