chore: updated a few things

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -68,7 +68,7 @@ vsync = true;
 opacity-rule = [
 	"100:class_g = 'mpv'",
 	"100:class_g = 'VirtualBox Machine'",
-	"95:class_g = 'Google-chrome'",
+	"98:class_g = 'firefox'",
 	"95:class_g = 'Zathura'",
 ];
 
