chore: update dots

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,8 +6,12 @@ bind r source-file ~/.config/tmux/tmux.conf
 
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
+#bind -n M-h select-pane -L
+#bind -n M-l select-pane -R
+
+bind -n M-h select-window -p
+bind -n M-l select-window -n
+
 
 # Set new panes to open in current directory
 bind v split-window -v -c "#{pane_current_path}"
