chore: chore chore chore

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,3 +1,4 @@
 save-position-on-quit
 screenshot-directory="~/media/pictures/mpv/"
-screenshot-template="%F_%p"
+# screenshot-template="%F.%wH_%wM_%wS"
+screenshot-template="%F_%03n"
