--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -9,7 +9,9 @@ format-connected-underline = ${colors.cyan}
 ;label-connected =  %upspeed:9%  %downspeed:9% 
 label-connected = %essid%
 label-connected-padding = 5px
+
 label-disconnected = 睊
+label-disconnected-padding = 5px
 label-disconnected-foreground = ${colors.foreground-alt}
 
 format-disconnected = <label-disconnected>
