--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -70,6 +70,7 @@ opacity-rule = [
 	"100:class_g = 'VirtualBox Machine'",
 	"98:class_g = 'firefox'",
 	"95:class_g = 'Zathura'",
+	"100:class_g = 'Sxiv'",
 ];
 
 blur:
