--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,5 +1,5 @@
-# 
-music_directory		"~/media/music/"
+
+music_directory		"~/media/music"
 playlist_directory	"~/.config/mpd/playlists"
 db_file				"~/.config/mpd/database"
 log_file			"~/.config/mpd/log"
