--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -16,3 +16,5 @@ current_item_prefix = $(cyan)$r$b
 current_item_suffix = $/r$(end)$/b
 current_item_inactive_column_prefix = $(magenta)$r
 current_item_inactive_column_suffix = $/r$(end)
+
+execute_on_song_change = ncmpcpp_songinfo
