chore: hmm, nice.

--- a/.config/tmux.conf
+++ b/.config/tmux.conf
@@ -1,5 +1,4 @@
 set -g mouse on
-#set -g status-style fg=white,bg=black
 
 # reload source-file
 bind r source-file ~/.config/tmux/tmux.conf
@@ -16,13 +15,23 @@ bind -n M-L select-window -n
 bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'wfxr/tmux-power'
+
+# panes
+set -g pane-active-border-style 'bg=colour0 fg=colour9'
+
+# statusbar
+set -g status-position bottom
+set -g status-justify centre
+set -g status-style 'bg=colour235 fg=colour137 dim'
+set -g status-left ''
+set -g status-right ''
+
+setw -g window-status-current-style 'fg=colour1 bg=colour239 bold'
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+
+setw -g window-status-style 'fg=colour9 bg=colour235'
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 
-set -g @tmux_power_theme 'custom'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-#run '~/.config/tmux/plugins/tmp/tpm'
-run '$HOME/.config/tmux/plugins/tpm/tpm'
+# messages
+set -g message-style 'fg=colour232 bg=colour3 bold'
