--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,5 +1,6 @@
 [colors]
 background = #222
+background-transparent = #bb222222
 background-alt = #444
 foreground = #dfdfdf
 foreground-alt = #555
@@ -17,4 +18,13 @@ light_blue = #0a6cf5
 magenta = #8C6BC8
 cyan = #56ADBC
 white = #E3E3DD
+
+[colors]
+bg-1 = #12121f
+bg-2 = #222236
+bg-3 = #29293f
+
+fg-1 = #d4d7ff
+fg-2 = #e4e7ff
+fg-3 = #f4f7ff
 
