--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,7 +27,14 @@ include-file = ~/.config/polybar/modules/bspwm.ini
 include-file = ~/.config/polybar/modules/date.ini
 include-file = ~/.config/polybar/modules/title.ini
 include-file = ~/.config/polybar/modules/network.ini
+include-file = ~/.config/polybar/modules/cpu.ini
 
+[module/memory]
+type = internal/memory
+interval = 2
+format-prefix = "RAM "
+format-prefix-foreground = ${colors.primary}
+label = %percentage_used:2%%
 
 [bar/main]
 monitor = ${env:MONITOR:LVDS-1}
@@ -37,7 +44,7 @@ height = 30
 fixed-center = false
 line-size = 2
 
-background = ${colors.background}
+background = ${colors.background-transparent}
 foreground = ${colors.foreground}
 
 padding-left = 0
@@ -51,14 +58,15 @@ font-0 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-1 = Hack Nerd Font:style=Regular:size=10
 font-2 = Noto Color Emoji:style=Regular:scale=10;1
 
+
 modules-left = bspwm
 modules-center = title
-modules-right = pulseaudio wlan eth battery date 
+modules-right = memory cpu pulseaudio wlan eth battery date 
 
 tray-position = right
 tray-detached = false
 tray-maxsize = 16
-;tray-background = #95a5a6
+; tray-background = #95a5a6
 tray-offset-x = 0
 tray-offset-y = 0
 tray-padding = 0
