--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -1,33 +1,37 @@
-[module/wlan]
+[network-base]
 type = internal/network
-interface = wlp3s0
-interval = 3.0
+interval = 3
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+format-connected-underline = ${colors.red}
+format-disconnected-underline = ${self.format-connected-underline}
+; label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
+[module/wlan]
+inherit = network-base
+interface-type = wireless
 format-connected = <ramp-signal>  <label-connected>
-format-connected-underline = ${colors.cyan}
 
-;label-connected =  %upspeed:9%  %downspeed:9% 
 label-connected = %essid%
 label-connected-padding = 5px
-
-label-disconnected = 睊
+; label-disconnected = 睊
+label-disconnected = " 睊   "
 label-disconnected-padding = 5px
 label-disconnected-foreground = ${colors.foreground-alt}
 
-format-disconnected = <label-disconnected>
-format-disconnected-underline = ${self.format-connected-underline}
-
-ramp-signal-0 = 
-
+; ramp-signal-0 = 
+; label-connected-font = 7
+ramp-signal-0 = 󰀃
+; ramp-signal-0 = 
+; ramp-signal-0 = 󰤟
+; ramp-signal-1 = 󰤢
+; ramp-signal-2 = 󰤥
+; ramp-signal-3 = 󰀃
 
 
 [module/eth]
-type = internal/network
-interface = eno1
-;interface = enp0s20u1
-interval = 3.0
-format-connected-underline = #55aa55
+inherit = network-base
+interface-type = wired
 accumulate-stats = true
 format-disconnected-padding = 1
 label-connected =  %upspeed:9%  %downspeed:9% 
-
