--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,13 +1,17 @@
 # Font configuration
 font:
   normal:
-    family: Iosevka
+    family: Iosevka Nerd Font
+    # family: JetBrains Mono Nerd Font
     style: Regular
-  # italic:
-  #   family: Iosevka Term
-  #   style: Italic
-
   size: 9
+  offset:
+    x: 0
+    y: 1
+  glyph_offset:
+    x: 0
+    y: 1
+
 
 colors:
   # Default colors
