--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,6 +15,8 @@ bind -n M-L select-window -n
 bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 
+# ugh finally. this fixes the delay in keypress when switching between insert and normal mode in neovim.
+set -s escape-time 0
 
 # panes
 set -g pane-active-border-style 'bg=colour0 fg=colour9'
