beep boop: updating dots

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,8 @@
 # monitor=,preferred,auto,auto
 # monitor=LVDS-1,1920x1080@60,0x0,1
 # name,resolution,position, scale
-monitor=,preferred,0x0,1
+# monitor=,preferred,0x0,1
+monitor=LVDS-1,1920x1080@60,0x0,1
 
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -15,9 +16,10 @@ monitor=,preferred,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
 #
-exec-once = swaybg -i ~/media/pictures/wallpapers/cv0ACiF.jpg
+# exec-once = swaybg -i ~/media/pictures/wallpapers/cv0ACiF.jpg
+# exec-once = xrdb "$HOME/.config/x11/xresources"
+exec-once = "$HOME/.swaybg"
 exec-once = waybar & nm-applet --indicator
-exec-once = xrdb "$HOME/.config/x11/xresources"
 
 
 # █▀▀ █▄░█ █░█
@@ -81,7 +83,7 @@ decoration {
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 
-	inactive_opacity = 0.80
+	inactive_opacity = 0.8
 	active_opacity = 0.9
 
 	# dim_inactive = true
@@ -122,6 +124,8 @@ device:epic-mouse-v1 {
 #
 misc {
 	focus_on_activate = true
+	disable_hyprland_logo = true
+	# animate_manual_resizes = true
 }
 
 
