--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -2,17 +2,20 @@
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, wezterm
 bind = $mainMod, W, killactive,
 bind = $mainMod_ALT, Q, exit,
 bind = $mainMod, V, togglefloating
 bind = $mainMod, V, centerwindow, 1
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, fullscreen, 1
-bind = $mainMod, Space, exec, bemenu-run
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, grave, togglesplit, # dwindle
+bind = $mainMod, Space, exec, bemenu-run
+bind = $mainMod, Return, exec, wezterm
+bind = $mainMod, E, exec, wezterm -e lf
 
+#https://www.reddit.com/r/hyprland/comments/zyrrtp/how_do_i_switch_back_and_forth_between_two/
+bind = $mainMod,TAB,workspace,previous
 
 # special workspace (scratchpad)
 bind=$mainMod_ALT, S, movetoworkspace, special
@@ -29,6 +32,11 @@ bind = $mainMod SHIFT, h, swapwindow, l
 bind = $mainMod SHIFT, l, swapwindow, r
 bind = $mainMod SHIFT, k, swapwindow, u
 bind = $mainMod SHIFT, j, swapwindow, d
+
+bind = $mainMod_ALT SHIFT, l, resizeactive, 10 -10
+bind = $mainMod_ALT SHIFT, h, resizeactive, -10 10
+bind = $mainMod_ALT SHIFT, k, resizeactive, 10 -10
+bind = $mainMod_ALT SHIFT, j, resizeactive, -10 10
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -73,4 +81,4 @@ bind = ,  XF86MonBrightnessUp, exec, "$HOME/.local/bin/brightness.sh" "up"
 bind = ,  XF86MonBrightnessDown, exec, "$HOME/.local/bin/brightness.sh" "down"
 
 # screenshot
-bind = , Print, exec, "$HOME/.local/bin/way_shot"
+bind = , Print, exec, "$HOME/.local/bin/grimshot"
