--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -3,21 +3,14 @@
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# $> hyprctl clients (to get class name)
+# $ hyprctl clients (to get class name and other stuff)
 
-# windowrulev2 = opacity 0.90 0.90,class:^(Brave-browser)$
-windowrulev2 = opacity 0.90 0.90,class:^(org.wezfurlong.wezterm)$
+# opacity rules
+windowrulev2 = opacity 0.85 override 0.80,class:^(org.wezfurlong.wezterm)$
+windowrulev2 = opacity 0.95 override 0.80 override,class:^(Brave-browser)$
+windowrulev2 = opacity 0.95 override 0.80,class:^(Slack)$
 
-# windowrule = opacity 0.3 override 0.3 override,title:(.*)(Brave)$
-# windowrule = opacity 1.00 1.00,title:(.*)(Brave)$
-# windowrule = opacity 1.00 override 1.00 override,title:(.*)(Brave)$
-# windowrule=opacity 0.3 override 0.3 override,title:(.*)(- Youtube)$
-windowrulev2=opacity 0.3 override 1.0 override,title:(.*)(- Youtube)$
-#
-#
+# float rules
 windowrulev2 = float,class:^(pavucontrol)$
+
